<resources>
    <string name="app_name">Heat 5 Setup Manager</string>
    <string name="left_front_clicks">LF</string>
    <string name="right_front_clicks">RF</string>
    <string name="left_rear_clicks">LR</string>
    <string name="right_rear_clicks">RR</string>
    <string name="wedge_clicks">W</string>
    <string name="tire_layout_left_front_title">Left Front</string>
    <string name="tire_wear">Tire Wear</string>
    <string name="outside">Outside</string>
    <string name="middle">Middle</string>
    <string name="inside">Inside</string>
    <string name="green_flag_restart_laps">Green Flag Restart Fuel Laps</string>
    <string name="green_flag_pit_laps">Green Flag Pit Fuel Laps</string>
    <string name="tire_wear_laps">Tire Wear Laps</string>
    <string name="start_lap">Start Lap</string>
    <string name="last_lap">Last Lap</string>
</resources>